<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Liqoid</string>
    <string name="dataage">Data from</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_inis">Newest Issues</string>
    <string name="tab_areas">Areas</string>
    <string name="tab_areas_long">Choose Areas and Instances</string>
    <string name="menu_refresh">Refresh</string>
    <string name="downloading">Downloading from LQFB server</string>
    <string name="download_ok">Download successfull</string>
    <string name="download_error">Error when trying to download.\n Waiting for network...</string>
    <string name="open_browser">Open in Browser</string>
    <string name="instances_prompt">Choose a LQFB instance</string>
    <string name="reversesort">Reverse Order</string>
    <string name="share">Share</string>
    <string name="updating">Updating</string>
    <string name="filterfavorites">Filter Favs</string>
    <string name="about">About Liqoid</string>
    <string name="calendar">Calendar entry for next event</string>
    <string name="calendar_voting">Calendar entry for start voting</string>
    <string name="voting_begin">Voting starts</string>
    <string name="noareasselected">To view issues, you have to select areas first.</string>
    <string name="prefs">Settings</string>
    <string name="dateformat">yy-MM-dd HH:mm</string>
    <string name="dateformatnear">HH:mm</string>
    <string name="projecthome">To project home</string>
    <string name="projecthomeurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid</string>
    <string name="userguide">To guided tour</string>
    <string name="userguideurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid/GuidedTour</string>
    <string name="addinstance">Add your instance</string>
    <string name="addinstanceurl">http://wiki.piratenpartei.de/Benutzer:Andizo/Liqoid/Instanzen</string>
    <string name="datanotcomplete">Data NOT complete</string>
    <string name="menu_unlock_instance">Unlock instance</string>
    <string name="menu_lock_instance">Lock instance</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enterdeveloperkey">Enter Developerkey</string>
    <string name="enterdeveloperkeyhints">The Developerkey is generated from LQFB, see Settings there.</string>
    <string name="resetpublicinstances">Restore public instances</string>
    <string name="toinstance">To instance</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="finished">Finished</string>
    <string name="new_">New</string>
    <string name="accepted">Accepted</string>
    <string name="frozen">Frozen</string>
    <string name="voting">Voting</string>
    <string name="unknown">Unknown</string>
    <string name="votingends">Voting ends</string>
    <string name="lastVotingEnded">Finished</string>
    <string name="lastVotingStarted">Starts voting</string>
    <string name="lastFrozen">Frozen</string>
    <string name="lastClosed">Closed</string>
    <string name="lastRevoked">Revoked</string>
    <string name="lastNeuerEntwurf">New alternative</string>
    <string name="lastErzeugt">New issue</string>
    <string name="supporter">Supporter</string>
    <string name="members">Members</string>
    <string name="save">Save</string>
    <string name="collapse">Hide</string>
    <string name="initiatives">Initiatives</string>
    <string name="clearcachequestion">Do you really want to clear the cache?</string>
    <string name="clearcache">Clear cache</string>
    <string name="readcache">Reading from cache:</string>
    <string name="search">Search</string>
    <string name="fulltextsearch">Fulltext Search</string>
    <string name="casetextsearch">Case sensitive</string>
    <string name="servicestarted">Service started</string>
    <string name="refreshedcontent">Service paused. Next run:</string>

    <string name="fullcredits">Hello this is Liqoid V 0.3.3!\n Developer: @andizottmann\n
    All CC-BY-SA 3.0 DE\n
    Thanks to:\n@nlohmann @darkbln @viirus42 @LarsUlrich92 @Bocki_NBG  @threehoursleep @PiratenCup @mockfrog @Iceman
    @bridgerdier @hubx @larswestphal @Piratonym Tokamak  @mon3yp3nny @RedDog @levudev
    </string>
</resources>
