<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh_inislist"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/menu_refresh"/>
    <item android:id="@+id/sort_inislist"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:title="@string/reversesort"/>
    <item android:id="@+id/toggleselectedfilter"
          android:icon="@drawable/ic_menu_star"
          android:title="@string/filterfavorites"/>
    <item android:id="@+id/showsearch"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/search"/>
    <item android:id="@+id/prefs"
          android:icon="@android:drawable/ic_menu_manage"
          android:title="@string/prefs"/>
    <item android:id="@+id/clearcache"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
          android:title="@string/clearcache"/>
    <item android:id="@+id/about"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/about"/>
</menu>